--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <button class="btn" type=button>apple</button>
+    <button class="btn" >apple</button>
     <button class="btn">banana</button>
     <button class="btn">strubbarey</button>
     <button class="btn">grap</button>
